--- a/Views/Home/ListRequests.cshtml
+++ b/Views/Home/ListRequests.cshtml
@@ -1,29 +1,34 @@
-@model IEnumerable<PartyInvites.Models.GuestResponse>
+@model IEnumerable<EquipmentRequest.Models.UserRequest>
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Responses</title>
+    <title>Requests</title>
     <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
 </head>
 <body>
     <div class="text-center p-2">
         <h2 class="text-center">
-            Here is the list of people attending the party
+            Here is the list of requests
         </h2>
         <table class="table table-bordered table-striped table-sm">
             <thead>
-                <tr><th>Name</th><th>Email</th><th>Phone</th></tr>
+                <tr><th>ID</th><th>Name</th><th>Email</th><th>Phone</th><th>Role</th><th>Equipment Type</th><th>Request Details</th><th>Duration(number of days)</th></tr>
             </thead>
             <tbody>
-                @foreach (PartyInvites.Models.GuestResponse r in Model!) {
+                @foreach (EquipmentRequest.Models.UserRequest r in Model!) {
                     <tr>
+                        <td>@r.ID</td>
                         <td>@r.Name</td>
                         <td>@r.Email</td>
                         <td>@r.Phone</td>
+                        <td>@r.Role</td>
+                        <td>@r.EquipmentType</td>
+                        <td>@r.RequestDetails</td>
+                        <td>@r.Duration</td>
                     </tr>
                 }
             </tbody>
