--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,10 +9,10 @@
     <header>
         <nav>
            <div class="text-center m-2">
-                <a class="btn btn-primary" asp-action="RsvpForm">Home</a>
-                <a class="btn btn-primary" asp-action="RsvpForm">All Equipment Listing</a>
+                <a class="btn btn-primary" asp-action="Index">Home</a>
+                <a class="btn btn-primary" asp-action="ListRequests">All Equipment Listing</a>
                 <a class="btn btn-primary" asp-action="RsvpForm">Available Equipment</a>
-                <a class="btn btn-primary" asp-action="RsvpForm">RequestForm</a>
+                <a class="btn btn-primary" asp-action="RequestForm">RequestForm</a>
             </div>
         </nav>
     </header>
