Milestone 4. Listing pages

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,8 +10,8 @@
         <nav>
            <div class="text-center m-2">
                 <a class="btn btn-primary" asp-action="Index">Home</a>
-                <a class="btn btn-primary" asp-action="ListRequests">All Equipment Listing</a>
-                <a class="btn btn-primary" asp-action="RsvpForm">Available Equipment</a>
+                <a class="btn btn-primary" asp-action="AllEquipment">All Equipment Listing</a>
+                <a class="btn btn-primary" asp-action="AvailableEquipment">Available Equipment</a>
                 <a class="btn btn-primary" asp-action="RequestForm">RequestForm</a>
             </div>
         </nav>
